# safe-browser-core

./: README.md
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_main_delegate.cc  settings_brave_strings.grdp
browser/: BUILD.gn  brave_profile_prefs.cc
browser/android/login/: BUILD.gn  login_service_bridge.cc
common/: pref_names.cc  pref_names.h
patches/: android_webview-nonembedded-java-src-org-chromium-android_webview-devui-MainActivity.java.patch  brave.patch  chrome-VERSION.patch  chrome-android-java-res-drawable-ic_add.xml.patch  chrome-android-java-res-layout-bottom_control_container.xml.patch  chrome-android-java-res-layout-location_status_incognito_badge.xml.patch  chrome-android-java-res-layout-new_tab_page_incognito.xml.patch  chrome-android-java-res-layout-new_tab_page_layout.xml.patch  chrome-android-java-res-layout-suggestions_site_tile_grid_modern.xml.patch  chrome-android-java-res-layout-tab_switcher_toolbar.xml.patch  chrome-android-java-res-layout-tile_no_text_view.xml.patch  chrome-android-java-res-xml-clear_browsing_data_preferences_tab.xml.patch  chrome-android-java-res-xml-developer_preferences.xml.patch  chrome-android-java-res-xml-legal_information_preferences.xml.patch  chrome-android-java-res-xml-manage_sync_preferences.xml.patch  chrome-android-java-res_template-xml-syncadapter.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeBaseAppCompatActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-browser-prefs-incognito_mode_prefs.cc.patch  (+9 more)
(+70 files in other folders)
