# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

source_set("login") {
  check_includes = false
  sources = [
    "login_service_bridge.cc",
  ]

  deps = [
    "//base",
    "//crypto",
    "//brave/components/brave_referrals/common",
    "//brave/components/brave_rewards/common",
    "//brave/components/brave_shields/browser",
    "//brave/components/brave_sync",
    "//brave/components/p3a",
    "//components/content_settings/core/browser",
    "//components/prefs",
    "//content/public/browser",
    "//net",
    "//url",
  ]
}